[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comfyui-qabbit-wrapper"
version = "0.1.0"
description = "A simple wrapper to use ComfyUI nodes in standalone Python scripts (Qabbit Wrapper)"
readme = "qabbit_wrapper/README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "ComfyUI Qabbit Wrapper Contributors"}
]
keywords = ["comfyui", "qabbit", "wrapper", "nodes", "ai", "image-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "torch",
    "torchsde",
    "torchvision",
    "torchaudio",
    "numpy>=1.25.0",
    "einops",
    "transformers>=4.50.3",
    "tokenizers>=0.13.3",
    "sentencepiece",
    "safetensors>=0.4.2",
    "aiohttp>=3.11.8",
    "yarl>=1.18.0",
    "pyyaml",
    "Pillow",
    "scipy",
    "tqdm",
    "psutil",
    "alembic",
    "SQLAlchemy",
    "av>=14.2.0",
    "kornia>=0.7.1",
    "spandrel",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "opencv-python",
    "ftfy",
    "regex",
    "accelerate",
    "diffusers",
    "gguf",
    "sentence-transformers",
]




[project.urls]
Homepage = "https://github.com/yourusername/ComfyUI-QabbitWrapper"
Documentation = "https://github.com/yourusername/ComfyUI-QabbitWrapper#readme"
Repository = "https://github.com/yourusername/ComfyUI-QabbitWrapper"
Issues = "https://github.com/yourusername/ComfyUI-QabbitWrapper/issues"

[tool.hatch.build.targets.wheel]
packages = ["qabbit_wrapper"]

[tool.hatch.build.targets.wheel.shared-data]
"qabbit_wrapper/README.md" = "qabbit_wrapper/README.md"

[tool.setuptools]
packages = ["qabbit_wrapper"]

[tool.setuptools.package-data]
qabbit_wrapper = ["README.md"]

[tool.setuptools.package-dir]
"" = "."


